--- a/pod.yaml
+++ b/pod.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
   name: pod1
   labels:
     app: helloworld
-spec: 
+spec:
   containers:
   - name: k8s-demo
-     images: arjunachari12/k8s-demo
-     ports: 
-     - name: nodejs-port
-     containerPort: 3000
+    image: arjunachari12/k8s-demo
+    ports:
+    - name: nodejs-port
+      containerPort: 3000
